--- a/Model_Build/lightgbm_classifier.ipynb
+++ b/Model_Build/lightgbm_classifier.ipynb
@@ -48,7 +48,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.6/site-packages/lightgbm/__init__.py:46: UserWarning: Starting from version 2.2.1, the library file in distribution wheels for macOS is built by the Apple Clang (Xcode_8.3.1) compiler.\n",
+      "/anaconda3/lib/python3.7/site-packages/lightgbm/__init__.py:46: UserWarning: Starting from version 2.2.1, the library file in distribution wheels for macOS is built by the Apple Clang (Xcode_8.3.1) compiler.\n",
       "This means that in case of installing LightGBM from PyPI via the ``pip install lightgbm`` command, you don't need to install the gcc compiler anymore.\n",
       "Instead of that, you need to install the OpenMP library, which is required for running LightGBM on the system with the Apple Clang compiler.\n",
       "You can install the OpenMP library by the following command: ``brew install libomp``.\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -142,7 +142,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2785: DtypeWarning: Columns (28,29,30,31,32,33,34) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3020: DtypeWarning: Columns (32,33,34,35,36,37,38) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n",
+      "/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3020: DtypeWarning: Columns (25,26,27,28,29,30,31,32,33,34,35,36,37,38) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     }
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,15 +182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X train: (404290, 39)\n",
-      "X test:  (404290, 39)\n",
+      "X train: (404290, 49)\n",
+      "X test:  (2345796, 49)\n",
       "y train: (404290,)\n"
      ]
     }
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -269,9 +271,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.6/site-packages/lightgbm/engine.py:116: UserWarning: Found `num_boost_round` in params. Will use it instead of argument\n",
+      "/anaconda3/lib/python3.7/site-packages/lightgbm/engine.py:116: UserWarning: Found `num_boost_round` in params. Will use it instead of argument\n",
       "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n",
-      "/anaconda3/lib/python3.6/site-packages/lightgbm/engine.py:121: UserWarning: Found `early_stopping_rounds` in params. Will use it instead of argument\n",
+      "/anaconda3/lib/python3.7/site-packages/lightgbm/engine.py:121: UserWarning: Found `early_stopping_rounds` in params. Will use it instead of argument\n",
       "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
      ]
     },
@@ -279,13 +281,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 1: 5000 rounds, training loss 0.386111, validation loss 0.473904\n",
+      "Fold 1: 3213 rounds, training loss 0.248407, validation loss 0.314827\n",
       "\n",
-      "Fitting fold 2 of 2\n",
-      "Fold 2: 5000 rounds, training loss 0.387027, validation loss 0.474003\n",
-      "\n",
-      "CPU times: user 1h 25min 26s, sys: 1min 43s, total: 1h 27min 9s\n",
-      "Wall time: 25min 40s\n"
+      "Fitting fold 2 of 2\n"
      ]
     }
    ],
@@ -355,284 +353,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>column</th>\n",
-       "      <th>importance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>difference_between_q2</td>\n",
-       "      <td>826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>difference_between_q1</td>\n",
-       "      <td>1153</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>when_q1</td>\n",
-       "      <td>1372</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>where_q1</td>\n",
-       "      <td>1558</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>when_q2</td>\n",
-       "      <td>1596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>where_q2</td>\n",
-       "      <td>1802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>who_q2</td>\n",
-       "      <td>1962</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>who_q1</td>\n",
-       "      <td>2107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>why_q1</td>\n",
-       "      <td>3675</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>why_q2</td>\n",
-       "      <td>4048</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>what_q2</td>\n",
-       "      <td>5285</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>what_q1</td>\n",
-       "      <td>5307</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>how_q1</td>\n",
-       "      <td>5542</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>how_q2</td>\n",
-       "      <td>5611</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_4</td>\n",
-       "      <td>23877</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_19</td>\n",
-       "      <td>24584</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_11</td>\n",
-       "      <td>25215</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_7</td>\n",
-       "      <td>25612</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_15</td>\n",
-       "      <td>25846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_12</td>\n",
-       "      <td>26573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_13</td>\n",
-       "      <td>26981</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_1</td>\n",
-       "      <td>27075</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_6</td>\n",
-       "      <td>27127</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_3</td>\n",
-       "      <td>27163</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_14</td>\n",
-       "      <td>27182</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_5</td>\n",
-       "      <td>27205</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_8</td>\n",
-       "      <td>27464</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>NUM_WORDS(question1)</td>\n",
-       "      <td>27761</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_18</td>\n",
-       "      <td>27767</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>NUM_WORDS(question2)</td>\n",
-       "      <td>28143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_16</td>\n",
-       "      <td>28411</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_17</td>\n",
-       "      <td>28826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_9</td>\n",
-       "      <td>28966</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_2</td>\n",
-       "      <td>29871</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_10</td>\n",
-       "      <td>30730</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>PROB_BOTH_SHARE_TOPIC_0</td>\n",
-       "      <td>33586</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>id</td>\n",
-       "      <td>43229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>NUM_CHARACTERS(question1)</td>\n",
-       "      <td>46709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>NUM_CHARACTERS(question2)</td>\n",
-       "      <td>47253</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       column  importance\n",
-       "34      difference_between_q2         826\n",
-       "27      difference_between_q1        1153\n",
-       "23                    when_q1        1372\n",
-       "24                   where_q1        1558\n",
-       "30                    when_q2        1596\n",
-       "31                   where_q2        1802\n",
-       "28                     who_q2        1962\n",
-       "21                     who_q1        2107\n",
-       "25                     why_q1        3675\n",
-       "32                     why_q2        4048\n",
-       "29                    what_q2        5285\n",
-       "22                    what_q1        5307\n",
-       "26                     how_q1        5542\n",
-       "33                     how_q2        5611\n",
-       "5     PROB_BOTH_SHARE_TOPIC_4       23877\n",
-       "20   PROB_BOTH_SHARE_TOPIC_19       24584\n",
-       "12   PROB_BOTH_SHARE_TOPIC_11       25215\n",
-       "8     PROB_BOTH_SHARE_TOPIC_7       25612\n",
-       "16   PROB_BOTH_SHARE_TOPIC_15       25846\n",
-       "13   PROB_BOTH_SHARE_TOPIC_12       26573\n",
-       "14   PROB_BOTH_SHARE_TOPIC_13       26981\n",
-       "2     PROB_BOTH_SHARE_TOPIC_1       27075\n",
-       "7     PROB_BOTH_SHARE_TOPIC_6       27127\n",
-       "4     PROB_BOTH_SHARE_TOPIC_3       27163\n",
-       "15   PROB_BOTH_SHARE_TOPIC_14       27182\n",
-       "6     PROB_BOTH_SHARE_TOPIC_5       27205\n",
-       "9     PROB_BOTH_SHARE_TOPIC_8       27464\n",
-       "35       NUM_WORDS(question1)       27761\n",
-       "19   PROB_BOTH_SHARE_TOPIC_18       27767\n",
-       "36       NUM_WORDS(question2)       28143\n",
-       "17   PROB_BOTH_SHARE_TOPIC_16       28411\n",
-       "18   PROB_BOTH_SHARE_TOPIC_17       28826\n",
-       "10    PROB_BOTH_SHARE_TOPIC_9       28966\n",
-       "3     PROB_BOTH_SHARE_TOPIC_2       29871\n",
-       "11   PROB_BOTH_SHARE_TOPIC_10       30730\n",
-       "1     PROB_BOTH_SHARE_TOPIC_0       33586\n",
-       "0                          id       43229\n",
-       "37  NUM_CHARACTERS(question1)       46709\n",
-       "38  NUM_CHARACTERS(question2)       47253"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pd.DataFrame({\n",
     "    'column': list(df_train.columns),\n",
@@ -642,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,17 +376,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final CV score: 0.47395316132180676\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Final CV score:', final_cv_score)"
    ]
@@ -675,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,39 +491,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1f4f6a20>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pd.DataFrame(y_test).plot.hist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test duplicates with >0.9 confidence: 3492\n",
-      "Test mean prediction: 0.3681258134485073\n",
-      "Calibrated mean prediction: 0.20682191541399206\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Test duplicates with >0.9 confidence:', len(df_submission[df_submission.is_duplicate > 0.9]))\n",
     "print('Test mean prediction:', np.mean(y_test))\n",
@@ -815,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,60 +525,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(404290, 2)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_submission.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2345796"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "2345796"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(404290,)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_test.shape"
    ]
@@ -911,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
