master combiner updated to include distance features

--- a/Final_Build/master_combiner.ipynb
+++ b/Final_Build/master_combiner.ipynb
@@ -38,7 +38,8 @@
     "    'FEATURE_tfidf_{}.csv',\n",
     "    'graph_features_{}.csv',\n",
     "    'nlp_features_{}.csv',\n",
-    "    'non_nlp_features_{}.csv'\n",
+    "    'non_nlp_features_{}.csv',\n",
+    "    'FEATURE_distance_{}.csv'\n",
     "]"
    ]
   },
