--- a/Model_Build/lightgbm_classifier.ipynb
+++ b/Model_Build/lightgbm_classifier.ipynb
@@ -283,7 +283,9 @@
      "text": [
       "Fold 1: 3213 rounds, training loss 0.248407, validation loss 0.314827\n",
       "\n",
-      "Fitting fold 2 of 2\n"
+      "Fitting fold 2 of 2\n",
+      "Fold 2: 3793 rounds, training loss 0.241689, validation loss 0.313148\n",
+      "\n"
      ]
     }
    ],
