--- a/Model_Build/lightgbm_classifier.ipynb
+++ b/Model_Build/lightgbm_classifier.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -285,7 +285,9 @@
       "\n",
       "Fitting fold 2 of 2\n",
       "Fold 2: 3793 rounds, training loss 0.241689, validation loss 0.313148\n",
-      "\n"
+      "\n",
+      "CPU times: user 4h 15min 37s, sys: 2min 20s, total: 4h 17min 58s\n",
+      "Wall time: 1h 18min 12s\n"
      ]
     }
    ],
@@ -355,11 +357,344 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column</th>\n",
+       "      <th>importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>difference_between_q2</td>\n",
+       "      <td>514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>when_q1</td>\n",
+       "      <td>648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>min_kcore</td>\n",
+       "      <td>658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>who_q1</td>\n",
+       "      <td>735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>when_q2</td>\n",
+       "      <td>750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>difference_between_q1</td>\n",
+       "      <td>755</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>where_q2</td>\n",
+       "      <td>762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>where_q1</td>\n",
+       "      <td>802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>who_q2</td>\n",
+       "      <td>953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>why_q1</td>\n",
+       "      <td>1959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>why_q2</td>\n",
+       "      <td>2152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>how_q2</td>\n",
+       "      <td>2411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>what_q2</td>\n",
+       "      <td>2795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>how_q1</td>\n",
+       "      <td>2810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>what_q1</td>\n",
+       "      <td>3223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>common_neighbor_count</td>\n",
+       "      <td>3883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>max_kcore</td>\n",
+       "      <td>5210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>min_freq</td>\n",
+       "      <td>5775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>common_neighbor_ratio</td>\n",
+       "      <td>8117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>q1_freq</td>\n",
+       "      <td>9526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>q2_freq</td>\n",
+       "      <td>10211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>max_freq</td>\n",
+       "      <td>12402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_6</td>\n",
+       "      <td>15311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_4</td>\n",
+       "      <td>15945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_7</td>\n",
+       "      <td>16125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_11</td>\n",
+       "      <td>16459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_1</td>\n",
+       "      <td>16467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_12</td>\n",
+       "      <td>16707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_3</td>\n",
+       "      <td>16955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_14</td>\n",
+       "      <td>16980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>NUM_WORDS(question2)</td>\n",
+       "      <td>16982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_13</td>\n",
+       "      <td>17138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>NUM_WORDS(question1)</td>\n",
+       "      <td>17260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_15</td>\n",
+       "      <td>17309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_19</td>\n",
+       "      <td>17344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_16</td>\n",
+       "      <td>17390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_2</td>\n",
+       "      <td>17692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_9</td>\n",
+       "      <td>17862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_5</td>\n",
+       "      <td>17953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_18</td>\n",
+       "      <td>18129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_10</td>\n",
+       "      <td>18198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_8</td>\n",
+       "      <td>18302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_17</td>\n",
+       "      <td>18347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>PROB_BOTH_SHARE_TOPIC_0</td>\n",
+       "      <td>20686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>id</td>\n",
+       "      <td>23982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>q1_hash</td>\n",
+       "      <td>26233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>NUM_CHARACTERS(question2)</td>\n",
+       "      <td>27972</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>q2_hash</td>\n",
+       "      <td>28143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>NUM_CHARACTERS(question1)</td>\n",
+       "      <td>29009</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       column  importance\n",
+       "38      difference_between_q2         514\n",
+       "27                    when_q1         648\n",
+       "43                  min_kcore         658\n",
+       "25                     who_q1         735\n",
+       "34                    when_q2         750\n",
+       "31      difference_between_q1         755\n",
+       "35                   where_q2         762\n",
+       "28                   where_q1         802\n",
+       "32                     who_q2         953\n",
+       "29                     why_q1        1959\n",
+       "36                     why_q2        2152\n",
+       "37                     how_q2        2411\n",
+       "33                    what_q2        2795\n",
+       "30                     how_q1        2810\n",
+       "26                    what_q1        3223\n",
+       "45      common_neighbor_count        3883\n",
+       "44                  max_kcore        5210\n",
+       "47                   min_freq        5775\n",
+       "46      common_neighbor_ratio        8117\n",
+       "3                     q1_freq        9526\n",
+       "4                     q2_freq       10211\n",
+       "48                   max_freq       12402\n",
+       "11    PROB_BOTH_SHARE_TOPIC_6       15311\n",
+       "9     PROB_BOTH_SHARE_TOPIC_4       15945\n",
+       "12    PROB_BOTH_SHARE_TOPIC_7       16125\n",
+       "16   PROB_BOTH_SHARE_TOPIC_11       16459\n",
+       "6     PROB_BOTH_SHARE_TOPIC_1       16467\n",
+       "17   PROB_BOTH_SHARE_TOPIC_12       16707\n",
+       "8     PROB_BOTH_SHARE_TOPIC_3       16955\n",
+       "19   PROB_BOTH_SHARE_TOPIC_14       16980\n",
+       "40       NUM_WORDS(question2)       16982\n",
+       "18   PROB_BOTH_SHARE_TOPIC_13       17138\n",
+       "39       NUM_WORDS(question1)       17260\n",
+       "20   PROB_BOTH_SHARE_TOPIC_15       17309\n",
+       "24   PROB_BOTH_SHARE_TOPIC_19       17344\n",
+       "21   PROB_BOTH_SHARE_TOPIC_16       17390\n",
+       "7     PROB_BOTH_SHARE_TOPIC_2       17692\n",
+       "14    PROB_BOTH_SHARE_TOPIC_9       17862\n",
+       "10    PROB_BOTH_SHARE_TOPIC_5       17953\n",
+       "23   PROB_BOTH_SHARE_TOPIC_18       18129\n",
+       "15   PROB_BOTH_SHARE_TOPIC_10       18198\n",
+       "13    PROB_BOTH_SHARE_TOPIC_8       18302\n",
+       "22   PROB_BOTH_SHARE_TOPIC_17       18347\n",
+       "5     PROB_BOTH_SHARE_TOPIC_0       20686\n",
+       "0                          id       23982\n",
+       "1                     q1_hash       26233\n",
+       "42  NUM_CHARACTERS(question2)       27972\n",
+       "2                     q2_hash       28143\n",
+       "41  NUM_CHARACTERS(question1)       29009"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.DataFrame({\n",
     "    'column': list(df_train.columns),\n",
@@ -369,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,9 +713,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final CV score: 0.31398775259783984\n"
+     ]
+    }
+   ],
    "source": [
     "print('Final CV score:', final_cv_score)"
    ]
@@ -394,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,18 +836,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a42148898>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.DataFrame(y_test).plot.hist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test duplicates with >0.9 confidence: 26330\n",
+      "Test mean prediction: 0.1515807229083248\n",
+      "Calibrated mean prediction: 0.07312322349297931\n"
+     ]
+    }
+   ],
    "source": [
     "print('Test duplicates with >0.9 confidence:', len(df_submission[df_submission.is_duplicate > 0.9]))\n",
     "print('Test mean prediction:', np.mean(y_test))\n",
@@ -513,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,27 +891,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2345796, 2)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_submission.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2345796"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "2345796"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2345796,)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_test.shape"
    ]
